# discograph

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/discograph/: __init__.py  app.py  cli.py  config.py  data.py  graph.py
