[project]
name = "discograph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "arnaud-ma", email = "arnaudma.code@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = ["Environment :: Console"]
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.3",
    "beautifulsoup4>=4.14.3",
    "cyclopts>=4.5.1",
    "networkx>=3.6.1",
    "platformdirs>=4.5.1",
    "pydantic>=2.12.5",
    "pyvis>=0.3.2",
    "rich>=14.3.1",
    "tqdm>=4.67.1",
]

[project.urls]
Homepage = "https://github.com/arnaud-ma/discograph"
source = "https://github.com/arnaud-ma/discograph"
issues = "https://github.com/arnaud-ma/discograph/issues"
documentation = "https://github.com/arnaud-ma/discograph/blob/main/README.md"

[project.scripts]
discograph = "discograph:main"

[build-system]
requires = ["uv_build>=0.9.26,<0.10.0"]
build-backend = "uv_build"
